# token-burn-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  entrypoint.sh  pricing.yaml  pyproject.toml
scripts/: screenshot.py
src/token_dashboard/: __init__.py  cli.py  config.py  db.py  main.py  metrics.py  pricing.py  scheduler.py
src/token_dashboard/ingest/: __init__.py  base.py  claude.py  codex.py  registry.py
src/token_dashboard/static/: app.js  styles.css
src/token_dashboard/templates/: base.html  dashboard.html
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_ingest_claude.py  test_ingest_codex.py  test_metrics.py  test_pricing.py  test_reprice.py
