[project]
name = "token-dashboard"
version = "0.1.0"
description = "Self-hosted token-burn dashboard for Claude Code, Codex, and other AI coding tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.1",
    "apscheduler>=3.10,<4",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "pytz>=2024.1",
]

[project.scripts]
token-dashboard = "token_dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/token_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
